src/opengrok-k8s-docker-desktop/opengrok.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opengrok
  labels:
    app: opengrok
spec:
  selector:
    matchLabels:
      app: opengrok
  replicas: 1
  minReadySeconds: 15
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: opengrok
    spec:
      containers:
      - name: opengrok
        image: opengrok/docker:1.13
        ports:
        - containerPort: 8080
        - containerPort: 5000
        volumeMounts:
        - name: opengrok-src
          mountPath: /opengrok/src
        - name: opengrok-data
          mountPath: /opengrok/data
        - name: opengrok-etc
          mountPath: /opengrok/etc
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: opengrok-src
        persistentVolumeClaim:
          claimName: opengrok-src-pvc
      - name: opengrok-data
        persistentVolumeClaim:
          claimName: opengrok-data-pvc
  volumeClaimTemplates:
  - metadata:
      name: opengrok-etc
      labels:
        app: opengrok
    spec:
      storageClassName: "local-storage"
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Delete
